cc_binary(
    name = "hello_world_main",
    srcs = [
        "hello_world_main.cc",
    ],
    deps = [
        ":hello_world",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
    ],
)

cc_library(
    name = "hello_world",
    srcs = [
        "hello_world.cc",
    ],
    hdrs = [
        "hello_world.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "hello_world_test",
    srcs = [
        "hello_world_test.cc",
    ],
    deps = [
        ":hello_world",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
